--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
           </div>
         </div>
         <div class="form-section bg-white">
-          <h3 class="text-sm">Subscribe to Newsletter</h3>
-          <p class="text-sm">
+          <h3 class="txt-md">Subscribe to Newsletter</h3>
+          <p class="txt-sm">
             Subscribe now to receive tips on how to take your business to the
             next level.
           </p>
